# ContextSuite

./: .env.example  .gitignore  AGENT.md  CHANGELOG.md  CLAUDE.md  KNOWN_ISSUES.md  LICENSE  README.md  pyproject.toml
demo/: .gitignore  README.md  index.html  package-lock.json  package.json
demo/docs/constraints/: brand-color.md
demo/docs/incidents/: INC-2026-0001-red-theme-regression.md
demo/docs/notes/: theme-system.md
demo/src/: App.jsx  styles.css
docs/: README.md  architecture.md  demo-script.md  green-guard-demo.md  pipeline.md  plan.md  user-guideline.md  workflow.md
docs/fallback/: README.md
docs/plan/: CONTEXTSUITE_EXTENDED_PLAN.md  CONTEXTSUITE_LANDING_PAGE_MOCKUP.md  CONTEXTSUITE_LOGO_SYSTEM_PROMPTS.md  CONTEXTSUITE_PITCH_DECK.md  CONTEXTSUITE_PITCH_TTS_SCRIPT_UNDER_2_MIN.md  CONTEXTSUITE_VIDEO_TTS_SCRIPT_REFINED.md  SLIDES_PROMPT_BUSINESS_PROOF.md  final-draw.excalidraw
docs/schemas/: neo4j.md  qdrant.md  supabase.md
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/auth/: login-form.tsx  signup-wizard.tsx
frontend/components/landing/: faq-section.tsx  feature-grid-section.tsx  final-cta-section.tsx  footer.tsx  hero-section.tsx  how-it-works-section.tsx  integrations-section.tsx  (+4 more)
scripts/: demo_scenarios.py  ingest_brand_demo.py  ingest_demo.py  seed_data.py  seed_neo4j.py  setup_neo4j.py  start_demo_agents.ps1  test_all.py  test_gemini.py  test_neo4j.py  test_qdrant.py  test_services.py  test_supabase.py
(+7 files in other folders)
