[project]
name = "contextsuite"
version = "0.1.0"
description = "Context, governance, and memory layer for AI coding workflows"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = [
  "packages/shared",
  "packages/context-agent",
  "packages/cli-agent",
]

[tool.uv.sources]
contextsuite-shared = { workspace = true }

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["packages/*/tests"]

[dependency-groups]
dev = [
    "google-genai>=1.68.0",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
]
